[package]
name = "keyvault-agent-azure-auth"
description = "unofficial library for Azure authentication in Rust (experimental)"
repository = "https://github.com/JeffSimmer/azure-auth-rs"
version = "0.1.0-alpha"
authors = ["Jeff Simmer <jeff@jeffsimmer.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
async-trait = "0.1"
chrono = "0.4"
http = "0.2"
reqwest = { version=  "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["process"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
openssl = "0.10"